tests/good/test500.tig
let
  type iarr = array of int
  var arr := iarr [20] of 0
in
  arr[range(0,19)]
end